--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "joi": "^17.13.0",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.3",
     "next": "14.2.3",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
     "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
@@ -22,7 +30,8 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "3.2.5",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
