--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "joi": "^17.13.0",
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
