--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.11.1",
     "joi": "^17.13.0",
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,7 +23,8 @@
     "next": "14.2.3",
     "next-connect": "^1.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
