--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
